<resources>
    <string name="app_name">Github User</string>
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="following">Following</string>
    <string name="test_num_value">10</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="visit_on_github">Visit on Github</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="find_users">Find users…</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="username_content">\@%1$s</string>
    <string name="add_to_favorite">Add favorite</string>
    <string name="remote_from_favorite">Remove favorite</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="settings">Settings</string>
    <string name="no_users_in_favorite">No users in favorite list</string>
    <string name="preference_reminder_title">Reminder at 9.00 AM</string>
    <string name="key_sp_alarm">sp_alarm</string>
    <string name="notif_reminder_title">Reminder</string>
    <string name="notif_reminder_message">Don\'t Forget to check Github User App</string>
    <string name="reminder_time_value">09:00</string>
    <string name="alarm_created_message">Alarm has been created</string>
    <string name="alarm_disabled_message">Alarm disabled</string>
</resources>
