<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/mi_favorite_users"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorite_users"
        app:showAsAction="ifRoom"/>
    <group android:checkableBehavior="none" >
        <item
            android:id="@+id/mi_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/mi_change_language"
            android:title="@string/change_language" />
    </group>
</menu>